--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "build": "vite build",
     "build:prod": "vite build --config vite.config.prod.ts",
     "build:analyze": "vite build --config vite.config.prod.ts && npx vite-bundle-analyzer dist/stats.html",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "lint": "eslint . --report-unused-disable-directives",
+    "lint:fix": "eslint . --fix",
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
-    "test": "echo 'Tests will be added in future versions'",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "postbuild": "echo 'Build completed successfully! Ready for production deployment.'",
+    "security-check": "node scripts/security-check.js",
+    "precommit": "npm run security-check && npm run lint && npm run type-check",
     "health-check": "node scripts/health-check.js",
+    "deploy:production": "node scripts/deploy-production.js",
     "deploy:vercel": "vercel --prod",
     "deploy:netlify": "netlify deploy --prod"
   },
@@ -30,20 +36,26 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.18",
+    "esbuild": "^0.25.6",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "jsdom": "^26.1.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
+    "typescript": "~5.5.0",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2",
+    "vite": "^7.0.4",
     "vite-plugin-pwa": "^1.0.1",
+    "vitest": "^3.2.4",
     "zod": "^3.25.71"
   }
 }
